# qrRobust-scanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CODEOWNERS  CONFIG_FIX.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EMAIL_FIX.md  FIREBASE_SETUP.md  GIT_WORKFLOW.md  LICENSE  QUICK_START.md  README.md  RELEASE_NOTES.md  RENDER_DEPLOYMENT.md  REPOSITORY_MAINTENANCE.md  ROADMAP.md  SECURITY.md  VERCEL_SUPABASE_DEPLOYMENT.md  alembic.ini  app.py  backup_20251013.db  cli_qr_reader.py  create_test_qr.py  create_wifi_qr.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  enhanced_qr_reader.py  env.example  firebase-service-account.json.template  generate_test_qr.py  migrate_to_postgres.py  nixpacks.toml  package.json  plan.md  pyproject.toml  (+13 more)
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_analytics_dashboard.md  issue_documentation.md  issue_rate_limiting.md  issue_test_suite.md
.github/release/: template.md
.github/workflows/: ci-cd.yml  migrate.yml  release.yml
alembic/: env.py
alembic/versions/: 35169768688c_initial_migration.py
app/: database.py  main.py
app/api/v1/: __init__.py  analytics.py  auth.py  qr.py  qr_codes.py  qr_designer.py  rate_limits.py  subscriptions.py
app/core/: config.py
app/middleware/: rate_limit.py  security_headers.py
app/models/: __init__.py
app/schemas/: analytics.py  auth.py  qr_codes.py  subscriptions.py
app/services/: firebase_service.py  qr_designer.py  qr_generator.py  rate_limiter.py  stripe_service.py
app/utils/: auth.py  dependencies.py  performance.py  qr_processor.py
backend/: requirements-vercel.txt  requirements.txt
docs/: API.md  README.md
docs/examples/: sdk-examples.md
docs/guides/: developer-guide.md
docs/postman/: qr-reader-api-collection.json
frontend/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: FirebaseLogin.js  Layout.js
frontend/src/contexts/: AuthContext.js  QRContext.js
frontend/src/firebase/: auth.js  config.js
frontend/src/pages/: Analytics.js  Dashboard.js  Login.js  QRDesigner.js  QRManagement.js  QRScanner.js  Register.js  Settings.js
frontend/src/services/: api.js  supabase.js
frontend/src/utils/: performance.js
k8s/staging/: deployment.yaml  ingress.yaml
static/: sitemap.xml
templates/: index.html  result.html
tests/: conftest.py
uploads/: .gitkeep
